"These will followed…" -> "These will be followed…"

--- a/introduction.tex
+++ b/introduction.tex
@@ -6,4 +6,4 @@ After the bitcoin network came into existence in the beginning of 2009 \cite{bit
 One of the proposed solutions for the scaling problem was the \acrfull{ln}. This secondary overlay network increments the theoretical ceiling for the number of transactions per second by six orders of magnitude \cite{lightning_network}, allowing for millions of transactions per second.\\
 Contrary to what happens with bitcoin, where every transaction is broadcast to every node in the network, \acrshort{ln} transactions are routed through the network, from the sender to the receiver and through a number of intermediate hops.\\
 Although there is already a working implementation of an algorithm used to find the path between a sender and a receiver there's still work to be done towards developing alternative ways of finding paths in the lighting network \cite{trampoline_routing, ant_routing, flare}.\\
-The paper is organized as follows. Section 2 will explore the concepts and limitations of routing in the lighting network before going through some of the existing solutions for this problem. These will followed by section 3 where the proposed solution is presented and section 4 where the solution will be tested against the current implementation. Section 5 will draw the conclusion of the work.
+The paper is organized as follows. Section 2 will explore the concepts and limitations of routing in the lighting network before going through some of the existing solutions for this problem. These will be followed by section 3 where the proposed solution is presented and section 4 where the solution will be tested against the current implementation. Section 5 will draw the conclusion of the work.
