"...payment channel at to transact..." -> "...payment channel to transact..."

--- a/background.tex
+++ b/background.tex
@@ -63,7 +63,7 @@ Throughout bitcoin's existence work has been put into finding the best way for i
 \label{ssec:lightning_network}
 
 The Lightning protocol \cite{lightning_network} is a second layer protocol that is built on top of the bitcoin protocol. Using bitcoin's transaction scripting capabilities, Lightning defines the rules for the creation of a secondary overlay network between bitcoin nodes that allows for payments to be made from one node to another without trusting the intermediary nodes and without broadcasting new transactions to the blockchain. \\
-The lighting network has two main elements, nodes and payment channels. Payment channels are created when two nodes decide to broadcast a \textit{Funding Transaction} and add it to the blockchain, each effectively committing a pre-determined amount of bitcoin to the payment channel they just created. They can then use the payment channel at to transact between themselves privately at will, closing it and redeeming their bitcoin through another blockchain transaction whenever they wish to. \\
+The lighting network has two main elements, nodes and payment channels. Payment channels are created when two nodes decide to broadcast a \textit{Funding Transaction} and add it to the blockchain, each effectively committing a pre-determined amount of bitcoin to the payment channel they just created. They can then use the payment channel to transact between themselves privately at will, closing it and redeeming their bitcoin through another blockchain transaction whenever they wish to. \\
 When the payment channel concept is extended to allow for payments between nodes that are not directly connected there is a need to create payment routes; paths composed of multiple payment channels where payments between the end nodes can be routed through without the need of broadcasting them to the entire network.
 
 \subsection{Lightning Network Routing}
