Mobile Ad-hoc Network

--- a/glossaryEntries.tex
+++ b/glossaryEntries.tex
@@ -11,7 +11,7 @@
 \newacronym{uc}{UC}{Used Capacity}
 \newacronym{sd}{SD}{Standard Deviation}
 \newacronym{apl}{APL}{Average Path Length}
-\newacronym{manet}{MANET}{Mobile Ad hoc Network}
+\newacronym{manet}{MANET}{Mobile Ad-hoc Network}
 \newacronym{vpn}{VPN}{Virtual Private Network}
 \newacronym{vppn}{VPPN}{Virtual Private Payment Network}
 \newglossaryentry{off-chain}
