--- a/background.tex
+++ b/background.tex
@@ -99,8 +99,8 @@ A previous analysis of the lightning network \cite{ln_analysis} concluded that w
 \subsubsection{Flare}
 \label{sssec:flare}
 
-Flare \cite{flare} explores the ideas behind routing in \acrfull{manet}'s and applies them to routing in the lighting network.\\
-\acrshort{manet}'s share a lot of similarities with the lighting network. Like what happens with payment channels the connections between nodes in \acrshort{manet}'s are unstable, being created and becoming unavailable frequently. The same happens with nodes that, much like lighting nodes, recurrently join and leave the network. This frequent changes in the network make its topology very dynamic and an interesting study case for how routing in lighting might work. \\
+Flare \cite{flare} explores the ideas behind routing in \acrfull{manet} and applies them to routing in the lighting network.\\
+\acrshort{manet}s share a lot of similarities with the lighting network. Like what happens with payment channels the connections between nodes in \acrshort{manet}s are unstable, being created and becoming unavailable frequently. The same happens with nodes that, much like lighting nodes, recurrently join and leave the network. This frequent changes in the network make its topology very dynamic and an interesting study case for how routing in lighting might work. \\
 Flare is characterized as a hybrid routing algorithm. It is composed of two complementary proactive and reactive parts.\\
 The proactive part is responsible for keeping an updated routing table with information about channels in the local neighbourhood of the node but also information about beacon nodes. Any node can be a beacon node and every node has a different set of different nodes, they are assigned randomly and are scattered across the network, they help a node find paths beyond its neighbourhood by increasing the node's visibility of the network. A proactive scheme like this guarantees a strong knowledge of the local neighbourhood with the possibility of making connections with nodes further away. \\ 
 The reactive part of the algorithm takes the stage when a node decides to make a payment over \acrshort{ln}. If Alice wants to pay Bob she first tries to find a path that doesn't require a beacon node, this is accomplished by combining Bob's and her own routing table to find common known nodes. \\
