The single-letter word
Reference: http://petr.olsak.net/ftp/olsak/vlna/

Example: If I write a long sentence and use a
looooooong word for example, the 'a' word may
end up to be in the end of the line, or ever
worse, in the end of the page (like in current
version which I have printed out on paper,
page 3, last word is 'a').

--- a/background.tex
+++ b/background.tex
@@ -103,7 +103,7 @@ Flare \cite{flare} explores the ideas behind routing in \acrfull{manet} and appl
 \acrshort{manet}s share a lot of similarities with the lighting network. Like what happens with payment channels the connections between nodes in \acrshort{manet}s are unstable, being created and becoming unavailable frequently. The same happens with nodes that, much like lighting nodes, recurrently join and leave the network. This frequent changes in the network make its topology very dynamic and an interesting study case for how routing in lighting might work. \\
 Flare is characterized as a hybrid routing algorithm. It is composed of two complementary proactive and reactive parts.\\
 The proactive part is responsible for keeping an updated routing table with information about channels in the local neighbourhood of the node but also information about beacon nodes. Any node can be a beacon node and every node has a different set of different nodes, they are assigned randomly and are scattered across the network, they help a node find paths beyond its neighbourhood by increasing the node's visibility of the network. A proactive scheme like this guarantees a strong knowledge of the local neighbourhood with the possibility of making connections with nodes further away. \\ 
-The reactive part of the algorithm takes the stage when a node decides to make a payment over \acrshort{ln}. If Alice wants to pay Bob she first tries to find a path that doesn't require a beacon node, this is accomplished by combining Bob's and her own routing table to find common known nodes. \\
+The reactive part of the algorithm takes the stage when a~node decides to make a payment over \acrshort{ln}. If Alice wants to pay Bob she first tries to find a path that doesn't require a beacon node, this is accomplished by combining Bob's and her own routing table to find common known nodes. \\
 If it is not possible to find a path to Bob by combining their routing tables Alice will contact a beacon node and request his routing table to try to find a path to Bob in it. Due to how the proactive part of the algorithm works it is more probable to find a path by contacting these beacon nodes than by contacting any other nodes in the network. If Alice can't find a path by contacting the first beacon node she will sequentially try the other beacon nodes available in her routing table.\\
 Flare nodes rely on special "beacon" nodes to find paths to other nodes outside their neighbourhood. This is a threat to decentralization (the capacity of having all nodes performing the same tasks and having access to the same information) because it means that some nodes will have more information and perform different tasks than the rest of the network. Besides, and according to simulation, the dependence on beacons gets even larger as more beacons join the network. \\
 Simulations using Flare in a 100,000 nodes network found that it was able to find paths from 10 random nodes to every node in the network using the minimum of 5 beacons while keeping less than an average of 1000 routing entries per routing table \cite{flare}. The discovered paths are mostly suboptimal since the process of discovering new beacons to be able to communicate with nodes further away is depth-first search based. All the simulations considered a Watts-Strogatz graph \cite{watts-strogatz} which dismisses the scale-free properties presented by the network which might not have been apparent at the time of publication.\\
