Table 4 and represents: remove and

--- a/ldr.tex
+++ b/ldr.tex
@@ -50,7 +50,7 @@ Throughout the rest of this section, we will use the example network represented
   \end{center}
 \end{figure}
 
-Nodes populate their initial routing table with the information they have locally available, this is, the information about the distribution of the funds in the channels in which they take part. These entries are never removed from local memory and should always reflect the state of the underlying payment channels. Table \ref{table:routing_table_initial_a} and represents the initial \acrshort{ldr} routing tables of node A.
+Nodes populate their initial routing table with the information they have locally available, this is, the information about the distribution of the funds in the channels in which they take part. These entries are never removed from local memory and should always reflect the state of the underlying payment channels. Table \ref{table:routing_table_initial_a} represents the initial \acrshort{ldr} routing tables of node A.
 
 \begin{table}[H]
 \centering
