Making their shared channel
Was: ... their shared their channel ...

--- a/ldr.tex
+++ b/ldr.tex
@@ -110,7 +110,7 @@ D           & 2             & 0.16  & B       \\ \hline
 \end{table}
 
 After the steady-state is reached the network must be able to adapt to the frequent changes in the distribution of the funds in the payment channels.\\
-For example, if A sends 1 BTC to B, making their shared their channel state become (A: 1, B: 2), both nodes will reevaluate their routing tables focusing on the entries in which the next hop is the neighbour that shares the channel in which the payment took place. These reevaluation yields routing table \ref{table:routing_table_payment_a}.
+For example, if A sends 1 BTC to B, making their shared channel state become (A: 1, B: 2), both nodes will reevaluate their routing tables focusing on the entries in which the next hop is the neighbour that shares the channel in which the payment took place. These reevaluation yields routing table \ref{table:routing_table_payment_a}.
 
 \begin{table}[H]
 \centering
