Simulation: double changes
Was: "changes changes"

--- a/simulation.tex
+++ b/simulation.tex
@@ -90,7 +90,7 @@ The \acrfull{apl} is bigger when using \acrshort{ldr}. This is expected because,
 \end{table}
 
 Table \ref{table:simulation_channel_info1} confirms that the median value of the channels' balances distribution is an order of magnitude larger than the payment's distribution $\mu$, making the channels' balances much bigger than the payment volumes and the \acrshort{ldr}'s advantages over the current implementation negligible. \\
-In order to have a better insight on how the difference in probability of success changes changes with the size of the payment's volume every parameter in table \ref{table:simulation_params1} was kept, with the exception of the mean and standard deviation weights. Then the simulation was repeated 100 times for each of the different (MeanWeight, SDWeight) pair.
+In order to have a better insight on how the difference in probability of success changes with the size of the payment's volume every parameter in table \ref{table:simulation_params1} was kept, with the exception of the mean and standard deviation weights. Then the simulation was repeated 100 times for each of the different (MeanWeight, SDWeight) pair.
 The mean weight was then varied and the standard deviation weight calculated as its function according to equation \ref{eq:sd_calc}.
 \begin{equation}
     SD weight = \frac{Mean weight}{2}
