--- a/simulation.tex
+++ b/simulation.tex
@@ -112,7 +112,7 @@ Figure \ref{fig:simulation_results4} portrays the result of the simulations.
 \end{figure}
 
 As the mean weight and consequently the payments' volumes increase there is also an increase in the value of $\overline{\Delta}$, restating the conclusion that \acrshort{ldr}'s advantage over the current implementation gets larger as the payments' volumes increase. This only happens up to a certain point though, after reaching a maximum the $\overline{\Delta}$ value starts falling. The reason for this is that, since payments are getting bigger, the probability that the number of possible paths between two nodes that support such voluminous payments starts decreasing, a fact supported by the decrease in the average P(Success) for both solutions and that ends up diminishing \acrshort{ldr}'s advantage of being able to route through bigger capacity paths because not even those are able to support the increasingly bigger volumes.\\
-Lastly, the effects of increasing the underlying network of the simulation were studied through the increase of the "Number of nodes" parameter while keeping the rest of table's \ref{table:simulation_params1} parametrization. Up to this point, all simulations were run with networks that were reduced to 280 nodes before the biggest component was chosen to be the base network of the simulation. Increasing the number of nodes the network is reduced to will increase the size of the biggest component and base network of the simulation. This also increases its running time due to the fact that each simulated node stores a routing table that can have information about each one of the other nodes, forming a performance quadratic upper bound, $\mathcal{O}(n^2)$.\\
+Lastly, the effects of increasing the underlying network of the simulation were studied through the increase of the "Number of nodes" parameter while keeping the rest of table \ref{table:simulation_params1}'s parametrization. Up to this point, all simulations were run with networks that were reduced to 280 nodes before the biggest component was chosen to be the base network of the simulation. Increasing the number of nodes the network is reduced to will increase the size of the biggest component and base network of the simulation. This also increases its running time due to the fact that each simulated node stores a routing table that can have information about each one of the other nodes, forming a performance quadratic upper bound, $\mathcal{O}(n^2)$.\\
 To solve this issue the number of simulations was scaled down from 100 to 10. The results are given by Figure \ref{fig:simulation_results5}.\\
 
 \begin{figure}[H]
