In accordance with
See https://strategiesforparents.com/in-accordance-with-or-in-accordance-to-which-is-correct/

Was: "in accordance to"

--- a/conclusions.tex
+++ b/conclusions.tex
@@ -4,6 +4,6 @@ This work proposes a new solution for payment routing in the lightning network, 
 Research was made to understand the concepts behind the lightning network, its limitations and how the current \acrfull{spr} based implementations treated payment routing. From this research, a set of requirements needed for a new solution emerged and a solution that filled such requirements was developed.\\
 Firstly, the developed protocol was described through an analysis of its various components and their responsibilities within the system. This analysis was followed by an in-depth specification of the protocol where protocol messages and implementation details were described at the byte-level.\\
 Using a simulator, \acrshort{ldr}'s performance was compared to the performance of the current solution with moderate success. Results peaked at a performance difference of $4.6\%$ for a simulation with large volume payments and the biggest networks we were able to simulate on a reasonable time. These had less than 500 nodes compared to the 4420 nodes of the real \acrshort{ln}. Such a size difference, combined with the fact that simulated nodes could only store one path per destination, weakened some of \acrshort{ldr}'s strengths. A bigger performance difference should be expected when simulating with bigger networks and when working with the real lightning network.\\
-As future work, it would be interesting to explore the possibility of allowing node operators to set up their node in accordance to their routing goals. Parameters like how many routing entries should be allowed per destination, the maximum percentage of funds available for routing or giving certain routing preferences to selected neighbours could be set by the operator of a routing node in accordance to his needs.\\
+As future work, it would be interesting to explore the possibility of allowing node operators to set up their node in accordance with their routing goals. Parameters like how many routing entries should be allowed per destination, the maximum percentage of funds available for routing or giving certain routing preferences to selected neighbours could be set by the operator of a routing node in accordance with his needs.\\
 It would also be interesting to add, at the protocol level, the ability to share information about paths to subnets. This might help in reducing the bandwidth needed to share routing tables by reducing their size, grouping their entries into specific subnets.\\
 A concept analogous to what a \acrfull{vpn} is in networking could be paired with \acrshort{ldr}. By being behind a \acrfull{vppn} node, other nodes could mask their identities and payment route requests, routing them through the \acrshort{vppn} node and increasing their anonymity.\\
