--- a/ldr.tex
+++ b/ldr.tex
@@ -65,7 +65,7 @@ C           & 1             & 0.01  & C       \\ \hline
 \label{table:routing_table_initial_a}
 \end{table}
 
-Nodes will then start sharing routing gossip messages containing part or the entirety of their own routing tables. To prevent sharing more about a node's neighbourhood than needed, information about the next hops is omitted from the gossip messages. Table \ref{table:routing_gossip} is an example of what a gossip message based on Node A's initial routing table (\ref{table:routing_table_initial_a}) might look like.
+Nodes will then start sharing routing gossip messages containing part or the entirety of their own routing tables. To avoid sharing more about a node's neighbourhood than needed, information about the next hops is omitted from the gossip messages. Table \ref{table:routing_gossip} is an example of what a gossip message based on Node A's initial routing table (\ref{table:routing_table_initial_a}) might look like.
 
 \begin{table}[H]
 \centering
